--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "geometry-extrude",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "dev": "rollup -c -w",
     "build": "rollup -c && uglifyjs -c -m -- dist/geometry-extrude.js > dist/geometry-extrude.min.js"
   },
-  "author": "",
+  "types": "index.d.ts",
   "license": "MIT",
   "dependencies": {
     "earcut": "^2.1.3"
