--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "geometry-extrude",
-  "version": "0.1.0",
-  "main": "index.js",
+  "version": "0.1.1",
+  "main": "src/main.js",
   "scripts": {
     "dev": "rollup -c -w",
     "build": "rollup -c && uglifyjs -c -m -- dist/geometry-extrude.js > dist/geometry-extrude.min.js"
