update build infra

--- a/.babelrc
+++ b/.babelrc
@@ -1,13 +1,10 @@
 {
     "presets": [
       [
-        "es2015",
+        "@babel/preset-env",
         {
           "modules": false
         }
       ]
-    ],
-    "plugins": [
-      "external-helpers"
     ]
   }
