--- a/package.json
+++ b/package.json
@@ -13,14 +13,12 @@
     "earcut": "^2.1.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.2.2",
-    "babel-loader": "^6.4.0",
-    "babel-plugin-external-helpers": "^6.22.0",
-    "babel-preset-es2015": "^6.24.1",
-    "rollup": "^0.68.2",
-    "rollup-plugin-babel": "^2.7.1",
-    "rollup-plugin-commonjs": "^8.2.1",
-    "rollup-plugin-node-resolve": "^3.3.0",
+    "@babel/core": "^7.15.8",
+    "@babel/preset-env": "^7.15.8",
+    "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-commonjs": "^21.0.1",
+    "@rollup/plugin-node-resolve": "^13.0.6",
+    "rollup": "^2.58.0",
     "uglify-js": "3.3.28"
   }
 }
